--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -173,7 +173,7 @@
     }
 
     #sec__1 {
-        min-height: 1090px;
+        min-height: 1000px;
     }
 
     #sec__2 {
@@ -214,6 +214,10 @@
 
     .__seperator {
         min-height: 60px;
+    }
+
+    .sec1__img img {
+        height: 500px;
     }
 
 }
@@ -371,7 +375,7 @@
     }
 
     #sec__1 {
-        min-height: 920px;
+        min-height: 1080px;
     }
 
     #sec__5 {
@@ -385,13 +389,18 @@
     #sec__7 {
         min-height: 1640px;
     }
+
+    .sec1__img img {
+        height: 400px;
+        max-width: 100%;
+    }
 }
 
 /* ========================================== */
 
 @media (max-width: 424px) {
     #sec__1 {
-        min-height: 950px;
+        min-height: 1080px;
     }
 
     .resume__descrp p {
